---
title: Invoice Entities
---
classDiagram
    class VersionedEntity {
        -Long id
        -ZonedDateTime createdAt
        -ZonedDateTime modifiedAt
        -ZonedDateTime deletedAt
        #onCreate()
        #onUpdate()
        #onDelete()
    }
    class SizeEntity {
        -Long id
        -String name
        -String code
    }
    class ProductVariationEntity {
        -Long id
        -SizeEntity size
        -double price
        -DiscountEntity discount;
    }
    class DiscountEntity {
        -Long id
        -String name
        -String description
        -double percentage
        -boolean active
    }
    class ColorsEntity {
        -Long id
        -String name
        -String hex
    }
    class CategoryEntity {
        -Long id
        -String name
        -String code
    }
    class BaseProductEntity {
        -Long id
        -String SKU
        -String name
        -String description
        -String[] images
        -CategoryEntity category
    }
    class ApparelEntityBase {
        -Long id
        -ColorsEntity color
        -List~ProductVariationEntity~
    }
    ApparelEntityBase o-- ColorsEntity
    ApparelEntityBase --> ProductVariationEntity
    ProductVariationEntity --> DiscountEntity
    ProductVariationEntity --> SizeEntity
    BaseProductEntity --> CategoryEntity
    BaseProductEntity <|-- ApparelEntityBase
    VersionedEntity <|-- ColorsEntity
    VersionedEntity <|-- DiscountEntity
    VersionedEntity <|-- SizeEntity
    VersionedEntity <|-- BaseProductEntity
    VersionedEntity <|-- ProductVariationEntity
    VersionedEntity <|-- CategoryEntity

